First step in adding OpenWeathermap

--- a/sugarcoat/api/templates/index.html
+++ b/sugarcoat/api/templates/index.html
@@ -51,7 +51,7 @@
         <tbody>
         <tr>
             <td>
-                <a href="{{ url_for('rackspacecloud.index') }}"><img src="{{ url_for('static', filename='openweathermap/openweathermap_logo.png') }}"/>OpenWeatherMap</a>
+                <a href="{{ url_for('openweathermap.index') }}"><img src="{{ url_for('static', filename='openweathermap/openweathermap_logo.png') }}"/>OpenWeatherMap</a>
             </td>
             <td>
                 <a href="http://openweathermap.org/api"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://openweathermap.org/api</a>
