--- a/sugarcoat/openweathermap/blueprint/templates/openweathermap/login.html
+++ b/sugarcoat/openweathermap/blueprint/templates/openweathermap/login.html
@@ -17,43 +17,24 @@
         </div>
     </nav>
 
-    <h2> Log into openweathermap </h2>
+    <h2> Provide API key </h2>
 
-    <pre id="request_code">
-POST asdf
-Content-Type: application/json</pre>
     <div id="login_api">
         <div class="json_display">
 
-            <form class="post_json" method="POST" action="{{ url_for('openweathermap.identity_request', new_path='tokens') }}">
+            <form method="POST" action="{{ url_for('openweathermap.login_view') }}">
                 {{ form.hidden_tag() }}
-                    <pre>
-                    {{ test_dict|format_json_html|safe }}
-                    </pre>
+                API Key: {{ form.apikey }}
+                {% if form.apikey.errors %}
+                    <ul class=errors>
+                        {% for error in form.apikey.errors %}
+                            <li>{{ error }}</li>
+                        {% endfor %}
+                    </ul>
+                {% endif %}
                 <button class="btn btn-primary">Login stuff</button>
-
             </form>
         </div>
     </div>
-    <h2> Use Auth Token </h2>
 
-    Use this if you really don't trust us. Tokens are only valid for the life span, usually 24 hours.
-    <div id="login_api">
-    <pre id="request_code">
-POST asdf
-Content-Type: application/json</pre>
-        <div id="login_api">
-
-        <div class="json_display">
-            <form class="post_json" method="POST" action="{{ url_for('openweathermap.identity_request', new_path='tokens') }}">
-                {{ form_validate.hidden_tag() }}
-                    <pre>
-                    {{ use_token_dict|format_json_html|safe }}
-                    </pre>
-                <button class="btn btn-primary">Use Token</button>
-
-            </form>
-
-        </div>
-    </div>
 {% endblock %}
