Adding the first Sunlight Foundation

--- a/sugarcoat/api/templates/index.html
+++ b/sugarcoat/api/templates/index.html
@@ -60,6 +60,17 @@
                 <a href="http://openweathermap.org/maps"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://openweathermap.org/maps</a>
             </td>
         </tr>
+        <tr>
+            <td>
+                <a href="{{ url_for('sunlightfoundation.index') }}"><img src="{{ url_for('static', filename='sunlightfoundation/sunlightfoundation_logo.png') }}"/>sunlightfoundation</a>
+            </td>
+            <td>
+                <a href="http://sunlightfoundation.com/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://sunlightfoundation.com/</a>
+            </td>
+            <td>
+                <a href="http://sunlightfoundation.com/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://sunlightfoundation.com/</a>
+            </td>
+        </tr>
 
         </tbody>
     </table>
