Updating bad information

--- a/sugarcoat/api/templates/index.html
+++ b/sugarcoat/api/templates/index.html
@@ -12,7 +12,7 @@
        <thead><tr>
            <th>Service(Link goes to API)</th>
            <th>API Documentation</th>
-           <th>Help Info</th>
+           <th>Sign up</th>
        </tr></thead>
         <tbody>
             <tr>
@@ -23,7 +23,7 @@
                     <a href="http://docs.rackspace.com"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>Rackspace API Doc</a>
                 </td>
                 <td>
-                    <a href="https://pitchfork.cloudapi.co/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>https://pitchfork.cloudapi.co/</a>
+                    <a href="https://pitchfork.cloudapi.co/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>https://cart.rackspace.com/cloud</a>
                 </td>
             </tr>
             <tr>
@@ -34,7 +34,7 @@
                     <a href="https://documentation.mailgun.com/api_reference.html#api-reference"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>Mailgun API Doc</a>
                 </td>
                 <td>
-                    <a href="https://documentation.mailgun.com/user_manual.html#smtp-relay"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>Configure Relay</a>
+                    <a href="https://documentation.mailgun.com/user_manual.html#smtp-relay"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>https://mailgun.com/signup</a>
                 </td>
             </tr>
 
@@ -46,7 +46,7 @@
         <thead><tr>
             <th>Service(Link goes to API)</th>
             <th>API Documentation</th>
-            <th>Help Info</th>
+            <th>Signup</th>
         </tr></thead>
         <tbody>
         <tr>
@@ -57,18 +57,18 @@
                 <a href="http://openweathermap.org/api"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://openweathermap.org/api</a>
             </td>
             <td>
-                <a href="http://openweathermap.org/maps"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://openweathermap.org/maps</a>
+                <a href="http://openweathermap.org/maps"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://home.openweathermap.org/users/sign_up</a>
             </td>
         </tr>
         <tr>
             <td>
-                <a href="{{ url_for('sunlightfoundation.index') }}"><img src="{{ url_for('static', filename='sunlightfoundation/sunlightfoundation_logo.png') }}"/>sunlightfoundation</a>
+                <a href="{{ url_for('sunlightfoundation.index') }}"><img src="{{ url_for('static', filename='sunlightfoundation/sunlightfoundation_logo.png') }}"/></a>
             </td>
             <td>
                 <a href="http://sunlightfoundation.com/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://sunlightfoundation.com/</a>
             </td>
             <td>
-                <a href="http://sunlightfoundation.com/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://sunlightfoundation.com/</a>
+                <a href="http://sunlightfoundation.com/"><span class="glyphicon glyphicon-globe" aria-hidden="true"></span>http://sunlightfoundation.com/api/accounts/register/</a>
             </td>
         </tr>
 
