--- a/sugarcoat/sunlightfoundation/blueprint/templates/sunlightfoundation/index.html
+++ b/sugarcoat/sunlightfoundation/blueprint/templates/sunlightfoundation/index.html
@@ -9,7 +9,7 @@
 {% block main_body %}
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
-            <p class="navbar-text"><a href="{{ url_for('sunlightfoundation.services_view', servicename='currentWeather') }}"><span class="glyphicon glyphicon-cloud" aria-hidden="true"></span>Current Weather Data</a></p>
+            <p class="navbar-text"><a href="{{ url_for('sunlightfoundation.services_view', servicename='congress') }}"><span class="glyphicon glyphicon-tower" aria-hidden="true"></span>Congress</a></p>
 
             <ol class="breadcrumb navbar-right">
                 <li class="active"><a href="{{ url_for('sunlightfoundation.index') }}">Home</a></li>
